--- a/public/login.html
+++ b/public/login.html
@@ -79,7 +79,7 @@
 
 <body>
     <div class="login-card">
-        <h1>💎 FinancePro</h1>
+        <img src="assets/logo.png" alt="FinancePro" style="width: 100%; max-width: 250px; margin-bottom: 2rem;">
         <form id="login-form">
             <input type="text" id="username" placeholder="Usuário" required>
             <input type="password" id="password" placeholder="Senha" required>
