--- a/public/login.html
+++ b/public/login.html
@@ -79,7 +79,9 @@
 
 <body>
     <div class="login-card">
-        <img src="assets/logo.png" alt="FinancePro" style="width: 100%; max-width: 250px; margin-bottom: 2rem;">
+        <div class="logo-container" style="margin-bottom: 2rem; padding: 12px 24px;">
+            <img src="assets/logo.png" alt="FinancePro" style="max-width: 220px;">
+        </div>
         <form id="login-form">
             <input type="text" id="username" placeholder="Usuário" required>
             <input type="password" id="password" placeholder="Senha" required>
