UI: Reverter para visual original baseado em texto (Remover logos)

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,7 @@
 
     <!-- Mobile Header -->
     <header class="mobile-header">
-        <div class="logo-container" style="padding: 4px 12px;">
-            <img src="assets/logo.png" alt="FinancePro" style="height: 20px;">
-        </div>
+        <h1>💎 FinancePro</h1>
         <div id="header-actions" style="display:flex; align-items:center; gap:10px;">
             <div id="user-profile-mobile" style="display:flex; align-items:center; gap:8px;">
                 <!-- Filled by JS -->
@@ -27,12 +25,7 @@
 
     <!-- Desktop Sidebar (Visually hidden on mobile via CSS) -->
     <aside>
-        <div
-            style="padding: 1rem 1.5rem; display: flex; align-items: center; justify-content: center; margin-bottom: 2rem;">
-            <div class="logo-container">
-                <img src="assets/logo.png" alt="FinancePro" style="max-width: 140px;">
-            </div>
-        </div>
+        <h1>💎 FinancePro</h1>
         <nav>
             <button class="active" onclick="showSection('dashboard')">
                 <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" style="margin-right: 10px;">
