--- a/public/login.html
+++ b/public/login.html
@@ -79,9 +79,7 @@
 
 <body>
     <div class="login-card">
-        <div class="logo-container" style="margin-bottom: 2rem; padding: 12px 24px;">
-            <img src="assets/logo.png" alt="FinancePro" style="max-width: 220px;">
-        </div>
+        <h1>💎 FinancePro</h1>
         <form id="login-form">
             <input type="text" id="username" placeholder="Usuário" required>
             <input type="password" id="password" placeholder="Senha" required>
