--- a/public/admin.html
+++ b/public/admin.html
@@ -60,9 +60,7 @@
 
     <!-- Mobile Header -->
     <header class="mobile-header">
-        <div class="logo-container" style="padding: 4px 12px;">
-            <img src="assets/logo.png" alt="FinancePro" style="height: 20px;">
-        </div>
+        <h1>💎 FinancePro</h1>
         <div id="header-actions">
             <button onclick="logout()" style="background:none;border:none;color:white;font-size:0.9rem;">Sair</button>
         </div>
@@ -70,13 +68,8 @@
 
     <!-- Sidebar (Desktop) -->
     <aside>
-        <div
-            style="padding: 1rem 1.5rem; display: flex; flex-direction: column; align-items: center; margin-bottom: 2rem;">
-            <div class="logo-container">
-                <img src="assets/logo.png" alt="FinancePro" style="max-width: 140px;">
-            </div>
-            <span style="font-size:0.8rem; color:#94a3b8; margin-top: 10px; font-weight:400;">Painel Admin</span>
-        </div>
+        <h1>💎 FinancePro <span style="font-size:0.8rem; color:#94a3b8; display:block; font-weight:400;">Admin</span>
+        </h1>
         <nav>
             <button class="active">
                 <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" style="margin-right: 10px;">
