--- a/public/admin.html
+++ b/public/admin.html
@@ -61,8 +61,12 @@
     <!-- Mobile Header -->
     <header class="mobile-header">
         <h1>💎 FinancePro</h1>
-        <div id="header-actions">
-            <button onclick="logout()" style="background:none;border:none;color:white;font-size:0.9rem;">Sair</button>
+        <div id="header-actions" style="display:flex; align-items:center; gap:12px;">
+            <div id="user-profile-mobile" style="display:flex; align-items:center; gap:10px;">
+                <!-- Filled by JS -->
+            </div>
+            <button onclick="logout()"
+                style="background:none;border:none;color:#ef4444;font-size:0.95rem;font-weight:600;">Sair</button>
         </div>
     </header>
 
@@ -243,6 +247,21 @@
             window.location.href = '/login.html';
         }
 
+        function renderUserProfile() {
+            const profileContainer = document.getElementById('user-profile-mobile');
+            if (!profileContainer || !user) return;
+
+            const photoHtml = user.photo_path
+                ? `<img src="/${user.photo_path}" style="width:40px; height:40px; border-radius:50%; object-fit:cover; border: 2px solid var(--primary);">`
+                : `<div style="width:40px; height:40px; border-radius:50%; background:#334155; display:flex; align-items:center; justify-content:center; font-size:1.2rem; border: 2px solid #334155;">👤</div>`;
+
+            profileContainer.innerHTML = `
+                <span style="font-size:1rem; font-weight:600; color:#fff;">${user.full_name || user.username}</span>
+                ${photoHtml}
+            `;
+        }
+
+        renderUserProfile();
         loadUsers();
     </script>
 </body>
