UI: Remover botão Sair e tornar clique no perfil o gatilho de logout

--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,11 @@
     <!-- Mobile Header -->
     <header class="mobile-header">
         <h1>💎 FinancePro</h1>
-        <div id="header-actions" style="display:flex; align-items:center; gap:12px;">
-            <div id="user-profile-mobile" style="display:flex; align-items:center; gap:10px;">
+        <div id="header-actions">
+            <div id="user-profile-mobile" style="display:flex; align-items:center; gap:10px; cursor:pointer;"
+                onclick="logout()" title="Clique para Sair">
                 <!-- Filled by JS -->
             </div>
-            <button onclick="logout()"
-                style="background:none;border:none;color:#ef4444;font-size:0.95rem;font-weight:600;">Sair</button>
         </div>
     </header>
 
