Fix: Corrigir evento de clique no perfil que causava logout indevido

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <h1>💎 FinancePro</h1>
         <div id="header-actions">
             <div id="user-profile-mobile" style="display:flex; align-items:center; gap:10px; cursor:pointer;"
-                onclick="logout()" title="Clique para Sair">
+                onclick="openProfileModal()" title="Minha Conta">
                 <!-- Filled by JS -->
             </div>
         </div>
